# everything-use-codex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
crates/codex-adapter/: Cargo.toml
crates/codex-adapter/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
docs/superpowers/specs/: 2026-07-13-everything-use-codex-runtime-design.md
examples/node-basic/: package.json
examples/node-basic/src/: index.ts
