[package]
name = "everything-codex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
everything-codex-adapter = { path = "../codex-adapter" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

